<resources>
    <string name="app_name">Amarican Football Scores</string>
    <string name="desc">Image</string>
    <string name="TeamA">Team A</string>
    <string name="team_b">Team B</string>
    <string name="_6_points">+6 points</string>
    <string name="_3_points">+3 points</string>
    <string name="_2_points">+2 points</string>
    <string name="_1_points">+1 Points</string>
    <string name="_0">0</string>
    <string name="reset">RESET</string>


</resources>
