<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/wall"
        android:contentDescription="@string/desc"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:baselineAligned="false"

                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/TeamA"
                android:textColor="#ffe500"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="24dp"
                android:text="0"
                android:textColor="#ffe500"
                android:textSize="56sp"
                android:textStyle="bold"


                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/six_point_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="#FF9800"
                android:onClick="addSixForTeamA"
                android:text="@string/_6_points" />

            <Button
                android:id="@+id/three_point_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="#FF9800"
                android:onClick="addThreeForTeamA"
                android:text="@string/_3_points" />

            <Button
                android:id="@+id/two_point_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="#FF9800"
                android:onClick="addTwoForTeamA"
                android:text="@string/_2_points" />

            <Button
                android:id="@+id/one_point_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="#FF9800"
                android:onClick="addOneForTeamA"
                android:text="@string/_1_points" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:baselineAligned="false"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/team_b"
                android:textColor="#ffe500"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="24dp"
                android:text="@string/_0"
                android:textColor="#ffe500"
                android:textSize="56sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="#FF9800"
                android:onClick="addSixForTeamB"
                android:text="@string/_6_points" />

            <Button
                android:id="@+id/three_point_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"

                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="#FF9800"
                android:onClick="addThreeForTeamB"
                android:text="@string/_3_points" />

            <Button
                android:id="@+id/two_point_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="#FF9800"
                android:onClick="addTwoForTeamB"
                android:text="@string/_2_points" />

            <Button
                android:id="@+id/one_point_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="#FF9800"
                android:onClick="addOneForTeamB"
                android:text="@string/_1_points" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="resetAll"
        android:text="@string/reset"
        android:textColor="@android:color/white" />
</RelativeLayout>